--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -41,6 +41,6 @@
     
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-   <script src="main.js"></script>//
+   <script src="main.js"></script>
 </body>
 </html>
